--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -2,45 +2,42 @@
     "name": "contracts",
     "version": "0.1.0",
     "license": "MIT",
-    "private": true,
     "scripts": {
         "build": "hardhat compile",
         "deploy": "npx hardhat run scripts/deploy.ts",
         "deploy:nft": "npx hardhat run scripts/nft.ts",
         "coverage": "hardhat coverage",
-        "test": "hardhat test "
+        "test": "hardhat test ",
+        "clean": "hardhat clean",
+        "typechain": "hardhat typechain"
     },
     "devDependencies": {
         "@ethersproject/abi": "^5.7.0",
         "@ethersproject/providers": "^5.7.2",
         "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
-        "@nomicfoundation/hardhat-ethers": "^3.0.4",
-        "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+        "@nomicfoundation/hardhat-ethers": "3.0.4",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
         "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-        "@nomicfoundation/hardhat-verify": "^1.0.0",
-        "@nomiclabs/hardhat-ethers": "^2.2.3",
+        "@nomicfoundation/hardhat-verify": "^1.1.1",
         "@nomiclabs/hardhat-etherscan": "^3.1.7",
+        "@openzeppelin/contracts": "^5.0.0",
+        "@openzeppelin/contracts-upgradeable": "^5.0.0",
         "@openzeppelin/hardhat-upgrades": "^2.3.3",
         "@typechain/ethers-v6": "^0.5.1",
-        "@typechain/hardhat": "^9.1.0",
-        "@types/chai": "^4.2.0",
-        "@types/mocha": ">=9.1.0",
-        "@types/node": ">=12.0.0",
-        "chai": "^4.2.0",
+        "@typechain/hardhat": "^8.0.3",
+        "@types/chai": "^4.3.9",
+        "@types/mocha": "^10.0.3",
+        "@types/node": "^20.8.10",
+        "chai": "^4.3.10",
         "dotenv": "^16.3.1",
         "ethers": "^6.8.1",
-        "hardhat": "^2.17.4",
         "hardhat-gas-reporter": "^1.0.9",
-        "prettier": "^3.0.3",
-        "prettier-plugin-solidity": "^1.1.3",
         "solidity-coverage": "^0.8.5",
         "ts-node": "^10.9.1",
-        "typechain": "^8.3.1",
-        "typescript": "^5.2.2",
-        "yarn-upgrade-all": "^0.7.2"
+        "typechain": "^8.3.2",
+        "typescript": "^5.2.2"
     },
     "dependencies": {
-        "@openzeppelin/contracts": "^5.0.0",
-        "@openzeppelin/contracts-upgradeable": "^5.0.0"
+        "hardhat": "^2.19.0"
     }
 }
