feat: updating testing flow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[solidity]": {
         "editor.defaultFormatter": "NomicFoundation.hardhat-solidity"
-    }
+    },
+    "cSpell.words": ["addrs", "corresp", "detokenizer", "inizialize", "keccak", "Pcompliant", "uups"]
 }
