--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -21,8 +21,8 @@
         "@nomicfoundation/hardhat-toolbox": "^3.0.0",
         "@nomicfoundation/hardhat-verify": "^1.0.0",
         "@nomiclabs/hardhat-etherscan": "^3.1.7",
-        "@openzeppelin/contracts": "^5.0.0",
-        "@openzeppelin/contracts-upgradeable": "^5.0.0",
+        "@openzeppelin/contracts": "^5.0.1",
+        "@openzeppelin/contracts-upgradeable": "^5.0.1",
         "@openzeppelin/hardhat-upgrades": "^2.3.3",
         "@typechain/ethers-v6": "^0.5.1",
         "@typechain/hardhat": "^8.0.3",
@@ -35,9 +35,9 @@
         "hardhat": "^2.19.2",
         "hardhat-gas-reporter": "^1.0.9",
         "solidity-coverage": "^0.8.5",
+        "ts-node": "^10.9.2",
         "typechain": "^8.3.2",
-        "typescript": "^5.2.2",
-        "ts-node": "^10.9.2"
+        "typescript": "^5.2.2"
     },
     "dependencies": {}
 }
