--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
     "[solidity]": {
         "editor.defaultFormatter": "NomicFoundation.hardhat-solidity"
     },
-    "cSpell.words": ["addrs", "corresp", "detokenizer", "inizialize", "keccak", "Pcompliant", "uups"]
+    "cSpell.words": ["addrs", "corresp", "detokenizer", "inizialize", "keccak", "Pcompliant", "uups"],
+    "github.copilot.advanced": {},
+    "github.copilot.editor.enableCodeActions": true
 }
